--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   path_provider: ^2.1.1
   url_strategy: ^0.3.0
   modal_bottom_sheet: ^3.0.0
+  flutter_svg: ^2.0.10+1
 
 
   
@@ -83,7 +84,7 @@ flutter:
 
   assets:
     - assets/images/
-  #   - assets/svg/
+    - assets/svg/
   #   - assets/svg/icons/
   #   - assets/svg/vectors/
   #   - assets/lottie/
