--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
     sdk: flutter
 
   ###CORE PACKAGES##################
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
+  hooks_riverpod: ^2.5.1
   shared_preferences: ^2.2.2
   auto_route: ^8.3.0
   permission_handler: ^11.0.1
@@ -77,6 +80,8 @@ dev_dependencies:
   json_serializable: ^6.7.1
   mocktail: ^1.0.1
   random_string: ^2.3.1
+  riverpod_generator: ^2.3.9
+  riverpod_lint: ^2.3.8
 
 flutter:
   generate: true
