--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ dependencies:
   url_strategy: ^0.3.0
   modal_bottom_sheet: ^3.0.0
   flutter_svg: ^2.0.10+1
-
+  cart_stepper: ^4.3.0
 
   
 dev_dependencies:
