--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   stack_trace: ^1.11.0
   logger: ^2.0.2+1
   fluttertoast: ^8.2.2
+  freezed_annotation: ^2.4.1
   connectivity_wrapper: ^1.1.4
   json_annotation: ^4.8.1
   timezone: ^0.9.2
@@ -78,6 +79,7 @@ dev_dependencies:
   auto_route_generator: ^8.1.0
   custom_lint: ^0.6.4 # other lints depend on this
   json_serializable: ^6.7.1
+  freezed: ^2.4.5
   mocktail: ^1.0.1
   random_string: ^2.3.1
   riverpod_generator: ^2.3.9
