--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   cached_network_image: ^3.3.1
   dio: ^5.4.0
   flutter_adaptive_scaffold: ^0.1.8
-
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
   ##BUILDERS########################
   build_runner: ^2.4.8
@@ -84,6 +85,7 @@ dev_dependencies:
   random_string: ^2.3.1
   riverpod_generator: ^2.3.9
   riverpod_lint: ^2.3.8
+  hive_generator: ^2.0.1
 
 flutter:
   generate: true
