--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   json_annotation: ^4.8.1
   timezone: ^0.9.2
   intl: ^0.19.0
+  equatable: ^2.0.5
   provider: ^6.1.1
   cached_network_image: ^3.3.1
   dio: ^5.4.0
