--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.0
 
   flutter_localizations:
     sdk: flutter
@@ -57,7 +57,6 @@ dependencies:
   country_code_picker: ^3.0.0
   multi_select_flutter: ^4.1.3
   flutter_native_splash: ^2.3.10
-
 ############HELPERS #################################
   file_picker: ^8.0.6
   url_launcher: ^6.2.2
@@ -72,6 +71,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   flutter_svg: ^2.0.10+1
   cart_stepper: ^4.3.0
+  extended_phone_number_input: ^1.0.2
 
   
 dev_dependencies:
