--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   badges: ^3.1.2
   pinput: ^5.0.0
   flutter_blurhash: ^0.8.2
+  image_picker: ^1.1.2
   intl_phone_number_input: ^0.7.3+1
   flutter_side_menu: ^0.5.3
   country_code_picker: ^3.0.0
