--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   stack_trace: ^1.11.0
   logger: ^2.0.2+1
   flutter_pdfview: ^1.3.4
+  open_filex: ^4.5.0  
   fluttertoast: ^8.2.2
   freezed_annotation: ^2.4.1
   connectivity_wrapper: ^1.1.4
