--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   permission_handler: ^11.0.1
   stack_trace: ^1.11.0
   logger: ^2.0.2+1
+  sn_progress_dialog: ^1.1.4
   flutter_pdfview: ^1.3.4
   open_filex: ^4.5.0  
   fluttertoast: ^8.2.2
