--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_adaptive_scaffold: ^0.1.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-
+  dropdown_textfield: ^1.2.0
   ##BUILDERS########################
   build_runner: ^2.4.8
 
