--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: ^2.2.2
   auto_route: ^8.3.0
   permission_handler: ^11.0.1
+  infinite_scroll_pagination: ^4.1.0
   stack_trace: ^1.11.0
   logger: ^2.0.2+1
   sn_progress_dialog: ^1.1.4
