--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  flutter_launcher_icons: ^0.14.2
   auto_route_generator: ^8.1.0
   custom_lint: ^0.6.4 # other lints depend on this
   json_serializable: ^6.7.1
@@ -114,8 +115,7 @@ flutter_launcher_icons:
   android: true
   ios: true
   remove_alpha_ios: true
-  web:
-    generate: true
+  image_path: assets/images/logo_image.png
   
 
 flutter_intl:
